test/libsolidity/syntaxTests/operators/userDefined/implementing_operator_with_library.sol
type Int is int16;

using {L as +} for Int global;

library L {}
// ----
// TypeError 8187: (27-28): Expected function name.
